clang/test/BSC/Negative/InitAnalysis/init-ensure-init-if-ret-fnptr-no-attr.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// =============================================================================
// A function-pointer typedef WITHOUT ensure_init_if_ret does NOT recognise
// the contract on the called target — the local stays uninitialized even
// when the underlying function would otherwise satisfy it.
// =============================================================================

typedef _Safe int (*PlainFn)(int *_Borrow out);

_Safe void test_fnptr_no_attr(PlainFn fn) {
    int x;
    int r = fn(&_Mut x);     // expected-error {{use of uninitialized value: `x`}}
    if (r == 0) {
        int y = x;           // expected-error {{use of uninitialized value: `x`}}
    }
}
